--- a/NER_Mobile_v1.ipynb
+++ b/NER_Mobile_v1.ipynb
@@ -200,27 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1601, 80)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -358,13 +338,7 @@
       "1440/1440 [==============================] - 5s 4ms/step - loss: 0.0547 - crf_viterbi_accuracy: 0.9810 - val_loss: 0.2078 - val_crf_viterbi_accuracy: 0.9454\n",
       "Epoch 46/100\n",
       "1440/1440 [==============================] - 5s 4ms/step - loss: 0.0537 - crf_viterbi_accuracy: 0.9811 - val_loss: 0.2135 - val_crf_viterbi_accuracy: 0.9455\n",
-      "Epoch 47/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 47/100\n",
       "1440/1440 [==============================] - 5s 4ms/step - loss: 0.0515 - crf_viterbi_accuracy: 0.9820 - val_loss: 0.2074 - val_crf_viterbi_accuracy: 0.9453\n",
       "Epoch 48/100\n",
       "1440/1440 [==============================] - 5s 4ms/step - loss: 0.0511 - crf_viterbi_accuracy: 0.9814 - val_loss: 0.2103 - val_crf_viterbi_accuracy: 0.9463\n",
@@ -473,7 +447,11 @@
       "Epoch 97/100\n",
       "1440/1440 [==============================] - 7s 5ms/step - loss: 0.0140 - crf_viterbi_accuracy: 0.9941 - val_loss: 0.2724 - val_crf_viterbi_accuracy: 0.9449\n",
       "Epoch 98/100\n",
-      " 896/1440 [=================>............] - ETA: 2s - loss: 0.0130 - crf_viterbi_accuracy: 0.9942"
+      "1440/1440 [==============================] - 8s 5ms/step - loss: 0.0130 - crf_viterbi_accuracy: 0.9943 - val_loss: 0.2750 - val_crf_viterbi_accuracy: 0.9429\n",
+      "Epoch 99/100\n",
+      "1440/1440 [==============================] - 7s 5ms/step - loss: 0.0133 - crf_viterbi_accuracy: 0.9945 - val_loss: 0.2623 - val_crf_viterbi_accuracy: 0.9443\n",
+      "Epoch 100/100\n",
+      "1440/1440 [==============================] - 6s 4ms/step - loss: 0.0120 - crf_viterbi_accuracy: 0.9951 - val_loss: 0.2699 - val_crf_viterbi_accuracy: 0.9440\n"
      ]
     }
    ],
@@ -497,14 +475,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1-score: 0.15704387990762125\n"
+      "F1-score: 0.7855375832540439\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-type seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-type seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-nhan_hieu seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-name seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-model seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-model seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: o seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-xuat_xu seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-color seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-so_hieu seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-tinh_trang seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-tinh_trang seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-sim seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-screen seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-screen seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-phu_kien seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-phu_kien seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: PAD seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-name seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-so_hieu seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-sim seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-application seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-application seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-os seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-os seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-screen_size seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-screen_size seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-color seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-nha_san_xuat seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-nhan_hieu seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-nha_san_xuat seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-storage seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-storage seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: b-ram seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-ram seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "C:\\Users\\MANHLK\\Anaconda3\\lib\\site-packages\\seqeval\\metrics\\sequence_labeling.py:171: UserWarning: i-xuat_xu seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n"
      ]
     }
    ],
